# vapoursynth-julek-plugin

./: CMakeLists.txt  README.md
src/: Butteraugli.cpp  shared.cpp  shared.h  ssimulacra.cpp  torgbs.cpp
